--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,15 @@
 datasets>=4.0.0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
 fastapi[standard]>=0.116.2
 groq>=0.31.0
 gunicorn>=23.0.0
 langchain>=0.3.27
-langchain-chroma>=0.2.6
-langchain-cohere>=0.4.6
 langchain-community>=0.3.29
 langchain-groq>=0.3.7
 langgraph>=0.6.6
-llama-index>=0.13.4
-llama-parse>=0.6.54
 pydantic>=2.11.7
 pydantic-ai>=1.0.1
 pydantic-ai-slim[groq]>=1.0.1
 pydantic-settings>=2.10.1
 sentence-transformers>=5.1.0
-spacy>=3.8.7
 pinecone==7.3.0
+pymupdf>=1.24.10
