--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-datasets>=4.0.0
-fastapi[standard]>=0.116.2
-groq>=0.31.0
-gunicorn>=23.0.0
-langchain>=0.3.27
-langchain-community>=0.3.29
-langchain-groq>=0.3.7
-langgraph>=0.6.6
-pydantic>=2.11.7
-pydantic-ai>=1.0.1
-pydantic-ai-slim[groq]>=1.0.1
-pydantic-settings>=2.10.1
-sentence-transformers>=5.1.0
-pinecone==7.3.0
-pymupdf>=1.24.10
-uvicorn[standard]>=0.24.0
+fastapi[standard]
+groq
+langchain
+langchain-community
+langchain-groq
+pydantic
+pydantic-settings
+pinecone
+pymupdf
+uvicorn[standard]
+langchain-cohere
